Update chap11.tex fix typo and punctuation
好多错别字，标点也不太规范……⊙﹏⊙∥

--- a/chap11.tex
+++ b/chap11.tex
@@ -30,7 +30,7 @@ In November, 1995, Peter Salus, a member of the Free Software Foundation and aut
 \fi
 
 \ifdefined\chs
-1995年11月，自由软件基金会成员彼得·萨卢斯（他于1994年出版了《\textit{Unix的四分之一世纪}》一书），在GNU工程的system-discuss邮件列表中发布了一个通知，为即将在马萨诸塞州召开的“在剑桥自由发布软件”大会征集黑客的论文。这场由自由软件基金会赞助的大会将于1996年2月召开，这是第一个纯由自由软件开发工程师的参加的大会，为了表现出自由软件程序员的团结一致，大会欢迎各种有关GNU、Linux、NetBS、386BSD、FreeBSD、Perl、Tcl/tk和任何可以自由获取和分发的工具软件相关的文章来大会交流。萨卢斯在通知中写道：
+1995年11月，自由软件基金会成员彼得·萨卢斯（他于1994年出版了《\textit{Unix的四分之一世纪}》一书），在GNU工程的system-discuss邮件列表中发布了一个通知，为即将在马萨诸塞州召开的“在剑桥自由发布软件”大会征集黑客的论文。这场由自由软件基金会赞助的大会将于1996年2月召开，这是第一个纯由自由软件开发工程师的参加的大会，为了表现出自由软件程序员的团结一致，大会欢迎各种有关GNU、Linux、NetBSD、386BSD、FreeBSD、Perl、Tcl/tk和任何可以自由获取和分发的工具软件相关的文章来大会交流。萨卢斯在通知中写道：
 \fi
 
 \begin{quote}
@@ -79,7 +79,7 @@ Finland has a significant (about 6\%) Swedish-speaking minority population. They
 \fi
 
 \ifdefined\chs
-会议召开的日子一天天临近，两个团体之间的紧张关系也变得更加明显。两个团体在一个问题上的观点是一致的：这次会议是他们第一次有机会当面见到芬兰神童托瓦兹。托瓦兹出人意料的证明了自己是一个出色和平易进人的演讲者。除了一点点轻徽的瑞典口音，托瓦兹敏捷的思路和谦虚的才智让到场的听众感到惊讶。\endnote{尽管Linus  托瓦兹是芬兰人，但他的母语是瑞典语。“The Rampantly Unofficial Linus FAQ”（\url{http://catb.org/~esr/faqs/linus/}）对此作出以下解释：
+会议召开的日子一天天临近，两个团体之间的紧张关系也变得更加明显。两个团体在一个问题上的观点是一致的：这次会议是他们第一次有机会当面见到芬兰神童托瓦兹。托瓦兹出人意料的证明了自己是一个出色和平易进人的演讲者。除了一点点轻微的瑞典口音，托瓦兹敏捷的思路和谦虚的才智让到场的听众感到惊讶。\endnote{尽管Linus  托瓦兹是芬兰人，但他的母语是瑞典语。“The Rampantly Unofficial Linus FAQ”（\url{http://catb.org/~esr/faqs/linus/}）对此作出以下解释：
 
 \begin{quote}
 芬兰有很多（大约6\%）说瑞典语的少数人口。他们把自己叫作“\textit{finlandssvensk}”或“\textit{finladsvenskar}”，并且把他们自己认定是芬兰人。他们很多的家庭都在芬兰居住了很多年。瑞典语是芬兰两种官方语言中的一种。
@@ -274,7 +274,7 @@ Summarized Raymond, ``I think Linus's cleverest and most consequential hack was 
 \fi
 
 \ifdefined\chs
-雷蒙德总结说：，“我觉得Linux最聪明的地方和最重要的hack就是创造出来Linux内核，而不是他所创造的Linux开发模式。”\endnote{参考埃里克·雷蒙德的文章“教堂与集市”，1997年。}
+雷蒙德总结说：“我觉得Linux最聪明的地方和最重要的hack就是创造出来Linux内核，而不是他所创造的Linux开发模式。”\endnote{参考埃里克·雷蒙德的文章“教堂与集市”，1997年。}
 \fi
 
 \ifdefined\eng
@@ -290,7 +290,7 @@ In summarizing the secrets of Torvalds' managerial success, Raymond attracted th
 \fi
 
 \ifdefined\chs
-在总结托瓦兹的成功管理经验方面，雷蒙德做自己也完成得的非常出色。.................跟预期的情况一样，听众并不仅仅被黑客所震惊，也有很多人对自由软件运动的快速成长表达了强烈的兴趣。Netscap就是其中的一个，。这家成立于加州山景城的创业公司，刚刚经历一了一场场持续了三年的与微软争夺Web浏览器的市场的争夺。出于对雷蒙德演讲的好奇和希望赢回失去的市场份额的期望目的，Netscape的执行官们居们把这次演讲的信息带回了公司总部。几个月以后，1998年1月，Netscape宣布计划把它的旗舰级产品Navigator Web浏览器的代码公开，希望能得到黑客们的支持，完成以后的开发。...............
+在总结托瓦兹的成功管理经验方面，雷蒙德做自己也完成得的非常出色。.................跟预期的情况一样，听众并不仅仅被黑客所震惊，也有很多人对自由软件运动的快速成长表达了强烈的兴趣。Netscape就是其中的一个，。这家成立于加州山景城的创业公司，刚刚经历一了一场场持续了三年的与微软争夺Web浏览器的市场的争夺。出于对雷蒙德演讲的好奇和希望赢回失去的市场份额的期望目的，Netscape的执行官们居们把这次演讲的信息带回了公司总部。几个月以后，1998年1月，Netscape宣布计划把它的旗舰级产品Navigator Web浏览器的代码公开，希望能得到黑客们的支持，完成以后的开发。...............
 \fi
 
 \ifdefined\eng
@@ -362,7 +362,7 @@ Looking back, O'Reilly doesn't see the decision to leave Stallman's name off the
 \fi
 
 \ifdefined\chs
-回头去看，O'Reilly仍然认为不邀请斯托曼的决定是怠慢了他。O’Reilly说：“在那个时候，我没有见过理查德·斯托曼本人，不过在我们的电子邮件沟通中，斯托曼看上去是个很强势的人，并且不太愿意加入对话。我希望能够保证在会议中展示出GNU的传统，所以我邀请了约翰·吉尔摩和Michael 蒂曼，这两个人我都比较熟悉，我知道他们对于GPL的价值都非常有热情，不过看上去他们更愿意参与有关自由软件项目和传统的优势和弱点的讨论。从后面发生的事情来看，我有点后悔没有邀请理查德，但是我没有这么做并不能看成是对GNU工程或理查德.斯托曼本人的不敬。”
+回头去看，O'Reilly仍然认为不邀请斯托曼的决定是怠慢了他。O’Reilly说：“在那个时候，我没有见过理查德·斯托曼本人，不过在我们的电子邮件沟通中，斯托曼看上去是个很强势的人，并且不太愿意加入对话。我希望能够保证在会议中展示出GNU的传统，所以我邀请了约翰·吉尔摩和迈克尔·蒂曼，这两个人我都比较熟悉，我知道他们对于GPL的价值都非常有热情，不过看上去他们更愿意参与有关自由软件项目和传统的优势和弱点的讨论。从后面发生的事情来看，我有点后悔没有邀请理查德，但是我没有这么做并不能看成是对GNU工程或理查德.斯托曼本人的不敬。”
 \fi
 
 \ifdefined\eng
@@ -386,7 +386,7 @@ Michael Tiemann, founder of Cygnus, proposed an alternative to the troublesome `
 \fi
 
 \ifdefined\chs
-Gygnus的创始人迈克尔·蒂曼建议用sourceware一词来代替容易引起误解的”自由软件“一词。”不过大部分人都对这个词没什么兴趣。“O'Reilly回忆到，”直到Eric抛出了‘开源’一词。”
+Cygnus的创始人迈克尔·蒂曼建议用sourceware一词来代替容易引起误解的”自由软件“一词。”不过大部分人都对这个词没什么兴趣。“O'Reilly回忆到，”直到Eric抛出了‘开源’一词。”
 \fi
 
 \ifdefined\eng
